# Package-Select

./: .gitignore  Cargo.toml  README.md
pkg_select_cli/: Cargo.toml
pkg_select_cli/src/: main.rs
pkg_select_cli/src/impls/: command_resolver_impl.rs  mod.rs
pkg_select_cli/src/impls/binder_registration/: linux_impl.rs  mod.rs  others_impl.rs
pkg_select_cli/src/impls/commands/: desync_impl.rs  mod.rs  purge_impl.rs  sync_impl.rs  update_config_impl.rs  validate_impl.rs
pkg_select_cli/src/impls/commands/update_subcommands/: commit_changes_impl.rs  env_var_impl.rs  (+4 more)
pkg_select_cli/src/impls/errors/: binder_registration_combo_impl.rs  binder_registration_impl.rs  command_impl.rs  command_resolve_impl.rs  mod.rs  path_binder_registration_combo_impl.rs  path_binder_registration_impl.rs  path_registration_combo_impl.rs  path_registration_impl.rs  windows_error_impl.rs
pkg_select_cli/src/impls/path_registration/: linux_impl.rs  mod.rs  others_impl.rs  windows_impl.rs
pkg_select_cli/src/models/: binder_registration_resolver.rs  command_resolver.rs  mod.rs  path_registration_resolver.rs
pkg_select_cli/src/models/commands/: desync.rs  evaluate.rs  mod.rs  purge.rs  sync.rs  update_config.rs  validate.rs
pkg_select_cli/src/models/errors/: binder_registration.rs  binder_registration_combo.rs  command.rs  command_resolve.rs  mod.rs  path_binder_registration.rs  path_binder_registration_combo.rs  path_registration.rs  path_registration_combo.rs  windows_error_wrapper.rs
pkg_select_cli/src/models/trait_combos/: command_combo.rs  mod.rs
pkg_select_cli/src/traits/: binder_registration.rs  cli_command.rs  command_collection.rs  command_resolve.rs  command_search.rs  linux_path_registration.rs  mod.rs  path_registration.rs
pkg_select_cli/src/utils/: root.rs
pkg_select_installer/linux/: Cargo.toml
pkg_select_installer/linux/src/: main.rs
pkg_select_installer/linux/src/impls/: arch_impl.rs  build_target.rs  mod.rs
pkg_select_installer/linux/src/models/: arch.rs  build_target.rs  mod.rs
pkg_select_runner/: Cargo.toml
pkg_select_runner/src/: main.rs
pkg_select_shared/: Cargo.toml
pkg_select_shared/src/: lib.rs
pkg_select_shared/src/argument_parser/: argument_parser.rs  mod.rs
pkg_select_shared/src/argument_parser/impls/: argument_impl.rs  mod.rs
pkg_select_shared/src/argument_parser/models/: argument.rs
pkg_select_shared/src/common_models/impls/: mod.rs  runtime_config_impl.rs
pkg_select_shared/src/common_models/models/: mod.rs  runtime_config.rs  validatable.rs
pkg_select_shared/src/common_models/traits/: binder_converter.rs  binder_search.rs  hashable_result.rs  mod.rs  validator.rs
pkg_select_shared/src/config_resolver/: category_resolver.rs  config_resolver.rs  mod.rs  package_resolver.rs
pkg_select_shared/src/config_resolver/impls/: category_resolver_impl.rs  config_resolver_impl.rs  mod.rs  package_resolver_impl.rs
pkg_select_shared/src/config_resolver/traits/: category_search.rs  config_path.rs  config_persistence.rs  mod.rs  package_search.rs
(+34 files in other folders)
